@@ -1,3 +1,9 @@
+2001-09-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* passwddlg.tcl: Accepted change by Bastien Chevreux
+	  <bach@users.sourceforge.net> adding a -logineditable option to
+	  the password dialog. [436340].
+
 2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* panedw.tcl: Added option -activator to allow user to choose sash
